edit group buy draft

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -545,12 +545,12 @@
                         Dropdown
                     </DropdownToggle>
                     <DropdownMenu>
-                        <DropdownItem Clicked='@(()=>addProductItem("Product Image"))'>
+                        <DropdownItem Clicked='@(()=>AddProductItem("Product Image"))'>
 
                             Product Picture
                         </DropdownItem>
                         <DropdownDivider />
-                        <DropdownItem Clicked='@(()=>addProductItem("Product Description"))'>
+                        <DropdownItem Clicked='@(()=>AddProductItem("Product Description"))'>
 
                             Product Description
                         </DropdownItem>
