--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -390,7 +390,7 @@
                 <i class="fa fa-check"></i>
                 @L["Save"]
             </Button>
-            <Button Color="Color.Secondary" Type="ButtonType.Link" To="Items" Class="me-2">
+            <Button Color="Color.Danger" Type="ButtonType.Link" To="Items" Class="me-2">
                 @L["Cancel"]
             </Button>
         </div>
