--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -920,10 +920,11 @@
         </div>
         <div class="row mb-3"></div>
 
-        <div style="text-align: center; margin-top:5px ;">
-            <Button Danger Type="@ButtonType.Button" Style="margin-right:5px">@L["Cancel"]</Button>
-            <Button Type="@ButtonType.Button" class="btn btn-primary me-1" Clicked="CreateEntityAsync">@L["Save"]</Button>
-            <Button Type="@ButtonType.Button" Style="margin-right:5px; background-color:skyblue">@L["Preview"]</Button>
+        <div class="d-flex flex-row-reverse">
+            <Button Type="@ButtonType.Button" class="btn btn-primary me-1" Clicked="CreateEntityAsync"> <i class="fa fa-check"></i> @L["Save"]</Button>
+            <Button Danger Type="@ButtonType.Button" class="btn btn-danger me-1" Clicked="CloseGroupBuyEdit" Style="margin-right:5px">@L["Cancel"]</Button>
+            
+         @*    <Button Type="@ButtonType.Button" class="btn btn-secondary me-1" >@L["Preview"]</Button> *@
 
         </div>
     </CardBody>
@@ -991,6 +992,10 @@
         _visible = false;
     }
 
+    private void CloseGroupBuyEdit()
+    {
+        NavigationManager.NavigateTo("GroupBuyManagement/GroupBuyList");
+    }
     private void HandleCancel(MouseEventArgs e)
     {
         Console.WriteLine(e);
