--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -420,7 +420,7 @@
                         <i class="fa fa-check"></i>
                         @L["Save"]
                     </Button>
-                    <Button Type="@ButtonType.Button" class="btn btn-secondary me-1">@L["Preview"]</Button>
+                    @* <Button Type="@ButtonType.Button" class="btn btn-secondary me-1">@L["Preview"]</Button> *@
                 </div>
             </div>
         </CardBody>
@@ -559,4 +559,5 @@
 </Modal>
 
 @code {
+   
 }
