--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
@@ -42,11 +42,14 @@
                   PageSize="_pageSize"
   RowDoubleClicked="OnEditItem">
             <DataGridColumns>
-             @*    <DataGridColumn TItem="GroupBuyDto" Caption="@L["Select"]">
-                    <DisplayTemplate>
-                        <InputCheckbox class="form-check-input" @bind-Value="@context.is"></InputCheckbox>
-                    </DisplayTemplate>
-                </DataGridColumn> *@
+
+            <DataGridColumn TItem="GroupBuyDto" Caption="@L["Select"]">
+                <DisplayTemplate>
+                    <InputCheckbox class="form-check-input" @bind-Value="@context.IsSelected"></InputCheckbox>
+                </DisplayTemplate>
+            </DataGridColumn>
+
+
                 <DataGridColumn TItem="GroupBuyDto"
                                 Field="@nameof(GroupBuyDto.GroupBuyName)"
                                 Caption="@L["GroupBuyName"]">
@@ -88,10 +91,7 @@
     
     
 
-    public void DeleteSelectedAsync()
-    {
-        
-    }
+  
 
      public void OnEditItem(DataGridRowMouseEventArgs<GroupBuyDto> e)
         {
