--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
@@ -231,7 +231,7 @@
                 </div>
         </div>
 
-   @*      <div class="row mt-2">
+        <div class="row mt-2">
             <div class="col-2">
                 <label>@L["SetItemPrice"]</label>
             </div>
@@ -281,11 +281,11 @@
                     </div>
                 </div>
             </div>
-        </div> *@
+        </div>
 
     </CardBody>
 
-@*     <CardFooter>
+    <CardFooter>
         <div class="row">
             <div class="col-12 text-lg-end">
                 <Button Type="@ButtonType.Button" class="btn btn-danger me-1" Clicked="CancelToSetItem">@L["Cancel"]</Button>
@@ -295,7 +295,7 @@
                 </Button>
             </div>
         </div>
-    </CardFooter> *@
+    </CardFooter> 
 </Card>
 
 
